--- a/weahter -app/index.html
+++ b/weahter -app/index.html
@@ -9,7 +9,8 @@
 <body>
     <div class="header">
         <h1>Sky Cast</h1>
-        <h2>Welcome to my weather-app </h2>
+        <h2>Welco
+          me to my weather-app </h2>
         <p>Type in your city and press Enter to easily explore your weather</p>
     </div>
   <div class="container">
