--- a/weahter -app/index.html
+++ b/weahter -app/index.html
@@ -21,9 +21,11 @@
         </div>
         <div id="weatherResult">
             <!-- Weather data will be inserted here -->
+             
         </div>
     </div>
 
+    <script src="config.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
